# robostats_lab2

./: README.md
Matlab_code/: SVM.m  SVM_fn.m  blr.m  generate_additional_features.m  generate_datafile_SVM.m  multi_multi_run.m  multi_run.m  results_SVM.mat  run_blr.m
src/classifiers/: CMakeLists.txt  package.xml
src/classifiers/config/: parameters.yaml
src/classifiers/data/: blr_am_Facade_test_results.txt  blr_am_Ground_test_results.txt  blr_am_Pole_test_results.txt  blr_am_Veg_test_results.txt  blr_an_Facade_test_results.txt  blr_an_Ground_test_results.txt  blr_an_Pole_test_results.txt  blr_an_Veg_test_results.txt  blr_an_Wire_test_results.txt  noised_features_n.node_features  random_features_n.node_features  svm_facade_m.node_features  svm_facade_n.node_features  svm_ground_n.node_features  svm_pole_m.node_features  svm_pole_n.node_features  svm_veg_m.node_features  svm_veg_n.node_features  svm_wire_m.node_features  svm_wire_n.node_features
src/classifiers/include/classifiers/: DataIO.h  ParameterUtils.h  Winnow.h
src/classifiers/launch/: blr.launch  svm_facade_m.launch  svm_facade_n.launch  svm_ground_m.launch  svm_ground_n.launch  svm_pole_m.launch  svm_pole_n.launch  svm_veg_m.launch  svm_veg_n.launch  svm_wire_m.launch  svm_wire_n.launch  test.launch
src/classifiers/src/: Winnow.cpp  classifiers.cpp
src/classifiers/vis/: test.rviz
